<resources>
    <string name="app_name">Wallet Shares</string>
    <string name="field_symbol_description">Type the symbol in this field</string>
    <string name="price_per_share">Price per share</string>
    <string name="amount_of_shares">Amount of shares</string>
    <string name="operation_rate">Operation rate</string>
    <string name="lbl_symbol">Symbol</string>
    <string name="lbl_btn_save">Save</string>
    <string name="lbl_btn_purchase">Purchase</string>
    <string name="share_item">Share item</string>
    <string name="price_or_quotation">Price or quotation</string>
    <string name="watch_list">Watch list</string>
    <string name="description_register_purchase">Register purchase</string>
    <string name="description_my_investiments">My investiments</string>
    <string name="lbl_btn_holdings">Holdings</string>
</resources>
