<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.PurchaseTransactionActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/txtil_symbol">

        <TextView
            android:id="@+id/lbl_symbol"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lbl_symbol"
            android:labelFor="@id/txt_symbol" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:contentDescription="@string/field_symbol_description" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/txtil_purchase_price">

        <TextView
        android:id="@+id/lbl_price_per_share"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/price_per_share"
        android:labelFor="@id/txt_price_per_share" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_price_per_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:contentDescription="@string/field_symbol_description" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/txtil_num_shares">

        <TextView
            android:id="@+id/lbl_amount_shares"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/amount_of_shares"
            android:labelFor="@id/txt_amount_shares" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_amount_shares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:contentDescription="@string/field_symbol_description" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/txtil_operation_rate">

        <TextView
            android:id="@+id/lbl_operation_rate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/operation_rate"
            android:labelFor="@id/txt_operation_rate" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_operation_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:contentDescription="@string/field_symbol_description" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_id"
            android:text="@string/lbl_btn_save"
            android:onClick="savePurchaseOperation"/>
    </LinearLayout>

</LinearLayout>