<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/lbl_equity"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="?android:textAppearanceLarge"/>
    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            app:cardBackgroundColor="#a6e18f"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:paddingTop="0dp"
            android:layout_marginTop="0dp"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:onClick="startPurchaseActivity"
            android:contentDescription="@string/description_register_purchase">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_principal_buttons"
                android:textAlignment="center"
                android:text="@string/lbl_btn_purchase"
                android:textSize="@dimen/txt_btn_principal"
                android:gravity="bottom"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            app:cardBackgroundColor="#FF00A6FF"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:onClick="startStocListActivity"
            android:contentDescription="@string/description_my_investiments">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_principal_buttons"
                android:textAlignment="center"
                android:text="@string/lbl_btn_holdings"
                android:textSize="@dimen/txt_btn_principal"
                android:gravity="bottom"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>